src/kubernetes/poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  namespace: tripinsights
spec:
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - name: poi
        image: registryfqd3481.azurecr.io/tripinsights/poi:1.0
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: poi
  namespace: tripinsights
spec:
  selector:
    app: poi
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poi
  namespace: tripinsights
  labels:
    name: poi
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/health-probe-path: /api/poi/healthcheck
spec:
  rules:
  - host: team5.northeurope.cloudapp.azure.com
    http:
      paths:
      - pathType: Prefix
        path: "/api/poi"
        backend:
          service:
            name: poi
            port: 
              number: 80
      - pathType: Prefix
        path: "/api/poi/*"
        backend:
          service:
            name: poi
            port: 
              number: 80
