src/kubernetes/trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  namespace: tripinsights
spec:
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
        aadpodidbinding: tripinsights-pod-identity
    spec:
      containers:
      - name: trips
        image: registryfqd3481.azurecr.io/tripinsights/trips:1.0
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/secrets"
          readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "openhack-vault-sqlpass"
---
apiVersion: v1
kind: Service
metadata:
  name: trips
  namespace: tripinsights
spec:
  selector:
    app: trips
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trips
  namespace: tripinsights
  labels:
    name: trips
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/health-probe-path: /api/trips/healthcheck
spec:
  rules:
  - host: team5.northeurope.cloudapp.azure.com
    http:
      paths:
      - pathType: Prefix
        path: "/api/trips"
        backend:
          service:
            name: trips
            port: 
              number: 80
      - pathType: Prefix
        path: "/api/trips/*"
        backend:
          service:
            name: trips
            port: 
              number: 80
