src/kubernetes/tripviewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer
  namespace: web
spec:
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
        role: frontend
    spec:
      containers:
      - name: tripviewer
        image: registryfqd3481.azurecr.io/tripinsights/tripviewer:1.1
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
  namespace: web
spec:
  selector:
    app: tripviewer
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripviewer
  namespace: web
  labels:
    name: tripviewer
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: team5.northeurope.cloudapp.azure.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tripviewer
            port: 
              number: 80
