src/kubernetes/user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
  namespace: tripinsights
spec:
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - name: user-java
        image: registryfqd3481.azurecr.io/tripinsights/user-java:1.0
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: user-java
  namespace: tripinsights
spec:
  selector:
    app: user-java
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-java
  namespace: tripinsights
  labels:
    name: user-java
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-hostname: user-java
    appgw.ingress.kubernetes.io/backend-protocol: http
spec:
  rules:
  - host: team5.northeurope.cloudapp.azure.com
    http:
      paths:
      - pathType: Prefix
        path: "/api/user-java/healthcheck"
        backend:
          service:
            name: user-java
            port: 
              number: 80
      - pathType: Prefix
        path: "/api/user-java/*"
        backend:
          service:
            name: user-java
            port: 
              number: 80
