src/kubernetes/userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: tripinsights
spec:
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - name: userprofile
        image: registryfqd3481.azurecr.io/tripinsights/userprofile:1.0
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: tripinsights
spec:
  selector:
    app: userprofile
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userprofile
  namespace: tripinsights
  labels:
    name: userprofile
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/health-probe-path: /api/user/healthcheck
spec:
  rules:
  - host: team5.northeurope.cloudapp.azure.com
    http:
      paths:
      - pathType: Prefix
        path: "/api/user"
        backend:
          service:
            name: userprofile
            port: 
              number: 80
      - pathType: Prefix
        path: "/api/user/*"
        backend:
          service:
            name: userprofile
            port: 
              number: 80
